# freertos-toradex

./: .cproject  MK20DN512xxx10_flash.ld  README.md  git_merge_2_repo.sh
board/: clock_config.c  pin_mux.c
doc/: FreeRTOS_on_the_Cortex-M4_of-a_Colibri_iMX7.maff
drivers/: fsl_adc16.c  fsl_dspi.c  fsl_dspi_edma.c  fsl_flexcan.c
examples/imx7_colibri_m4/low_power_demo/: hardware_init.c
examples/imx7_colibri_m4/low_power_demo/armgcc/: CMakeLists.txt
platform/devices/MCIMX7D/linker/gcc/: MCIMX7D_M4_ocram.ld
source/: FreeRTOSConfig.h  adc_task.c  adc_task.h  apalis-tk1-k20-api.h  can_task.c  can_task.h  com_task.c  com_task.h  gpio_ext.c  gpio_ext.h  main.c
utilities/: fsl_debug_console.h
